<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blueColor"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding_10dp"
                    android:layout_marginStart="@dimen/padding_10dp"
                    android:contentDescription="@string/todo"
                    android:onClick="BackClick"
                    android:src="@drawable/back" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/every_ride"
                    android:textAlignment="center"
                    android:textColor="#ffffff"
                    android:textSize="15sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_20dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/hand_percentage" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/padding_10dp"
                android:gravity="center"
                android:text="@string/optIn"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="12sp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/padding_10dp"
            android:gravity="center"
            android:text="@string/selected_cause"
            android:textAlignment="center"
            android:textColor="@color/blueColor"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_5dp"
            android:background="@drawable/custom_corner"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1.5"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding_10dp"
                    android:layout_marginStart="@dimen/padding_10dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/humanity" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/padding_10dp"
                    android:gravity="center"
                    android:text="@string/humanity"
                    android:textAlignment="center"
                    android:textColor="#8b8b8b"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/habitat_humanity"
                    android:textAlignment="center"
                    android:textColor="#1a1a1a"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:background="@color/blueColor"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/padding_10dp"
                    android:drawableTop="@drawable/info"
                    android:gravity="center"
                    android:text="@string/more_info"
                    android:textAlignment="center"
                    android:textColor="#ffffff"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/padding_10dp"
                    android:drawableTop="@drawable/stop"
                    android:gravity="center"
                    android:text="@string/stop"
                    android:textAlignment="center"
                    android:textColor="#ffffff"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/padding_10dp"
                    android:drawableTop="@drawable/share1"
                    android:gravity="center"
                    android:text="@string/share"
                    android:textAlignment="center"
                    android:textColor="#ffffff"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/padding_10dp"
            android:gravity="center"
            android:text="@string/different_cause"
            android:textAlignment="center"
            android:textColor="@color/blueColor"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_5dp"
            android:background="@drawable/custom_corner"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:id="@+id/layoutDonate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight=".5"
                android:background="#77CBEB"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/padding_5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/donate" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/padding_10dp"
                    android:gravity="center"
                    android:text="@string/donate"
                    android:textAlignment="center"
                    android:textColor="#ffffff"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:background="@color/blueColor"
                android:orientation="vertical"
                android:padding="@dimen/padding_5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/padding_10dp"
                    android:layout_marginTop="@dimen/padding_10dp"
                    android:gravity="center"
                    android:text="@string/education_welfare"
                    android:textAlignment="center"
                    android:textColor="#ffffff"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/padding_10dp"
                    android:gravity="center"
                    android:text="@string/empowering"
                    android:textAlignment="center"
                    android:textColor="#ffffff"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>

