<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueColor"
    android:fillViewport="true"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/layoutHeader"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/blueColor">

            <TextView
                fontPath="fonts/Poppins-Medium.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/padding_10dp"
                android:text="@string/fare_review"
                android:textColor="#ffffff"
                android:textSize="20sp"
                tools:ignore="MissingPrefix" />

            <ImageView
                android:layout_width="@dimen/padding_20dp"
                android:layout_height="@dimen/padding_20dp"
                android:layout_centerVertical="true"
                android:layout_gravity="start"
                android:layout_marginLeft="@dimen/padding_20dp"
                android:layout_marginStart="@dimen/padding_20dp"
                android:contentDescription="@string/todo"
                android:onClick="BackClick"
                android:src="@drawable/back" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layoutBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_20dp"
            android:layout_marginTop="@dimen/padding_20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:paddingTop="@dimen/padding_20dp"
                android:text="@string/why_review"
                android:textColor="@color/whiteColor"
                android:textSize="15sp" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/review_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_15dp"
                android:layout_marginRight="@dimen/padding_15dp"
                android:layout_marginTop="@dimen/padding_15dp"
                android:background="@drawable/edit_text_background"
                android:gravity="top|start"
                android:hint="@string/write_review"
                android:lines="3"
                android:padding="@dimen/padding_10dp"
                android:textColor="@color/blackColor" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/padding_20dp"
                android:contentDescription="@string/todo"
                android:onClick="SubmitClick"
                android:src="@drawable/submit" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
